--- a/front_end/res/css/main.css
+++ b/front_end/res/css/main.css
@@ -1,20 +1,29 @@
 body {
 	background-color: #34495e;
 	color: #bdc3c7;
-}
-
-#content {
 	text-align: center;
 }
 
-.footer
-{
+.footer {
     clear: both;
     padding: 0;
-    text-align: center;
     line-height: normal;
     margin: 0;
     position: fixed;
     bottom: 0px;
     width: 100%;
+}
+
+.footer < i {
+	font-size: 20px;
+}
+
+#banner{
+    background-color:white;
+    position:absolute;
+    left: 0;
+    right: 0;
+    padding:15px;
+    height:60px;
+    background-size:100%;      
 }
