front end stuff

--- a/front_end/res/css/main.css
+++ b/front_end/res/css/main.css
@@ -5,28 +5,32 @@ body {
 }
 
 #content {
-	padding-top: 10%;
-}
-
-.footer {
-    clear: both;
-    padding: 0;
-    line-height: normal;
-    margin: 0;
-    position: fixed;
-    bottom: 0px;
+	height: 100%;
 }
 
 i {
 	color: #bdc3c7;
 }
 
-#banner{
-    background-color:white;
-    position:absolute;
-    left: 0;
-    right: 0;
-    padding:15px;
-    height:60px;
-    background-size:100%;      
+.fa-circle-arrow-left {
+	float: left;
+}
+
+.fa-circle-arrow-right {
+	float: right;
+
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    margin: 0px;
+}
+
+.header div div {
+	-webkit-transition: all 1s ease-in-out;
+	-moz-transition: all 1s ease-in-out;
+	-o-transition: all 1s ease-in-out;
+	transition: all 1s ease-in-out;
 }
