--- a/front_end/res/css/main.css
+++ b/front_end/res/css/main.css
@@ -12,6 +12,10 @@ i {
 	color: #bdc3c7;
 }
 
+.spotifyIn {
+    padding-bottom: 10px;
+}
+
 .fa-circle-arrow-left {
 	float: left;
 }
@@ -19,6 +23,20 @@ i {
 .fa-circle-arrow-right {
 	float: right;
 
+}
+
+h2 {
+    font-size: medium;
+}
+
+.makeList {
+    background-color: #000;
+    height: 100%;
+}
+
+.title > h2 {
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .footer {
