--- a/front_end/res/css/main.css
+++ b/front_end/res/css/main.css
@@ -14,6 +14,7 @@ i {
 
 .spotifyIn {
     padding-bottom: 10px;
+    height: 100%;
 }
 
 .fa-circle-arrow-left {
@@ -26,12 +27,20 @@ i {
 }
 
 h2 {
-    font-size: medium;
+    font-size: 15pt;
+}
+
+ul {
+    list-style: none;
+    display: inline;
 }
 
 .makeList {
+    overflow-y: scroll;
     background-color: #000;
+    display: inline-block;
     height: 100%;
+    width: 60%;
 }
 
 .title > h2 {
